2008-03-07  Michael Hutchinson  <mhutchinson@novell.com> 

        * MonoDevelop.XmlEditor/XmlSchemasPanel.cs:
        * MonoDevelop.XmlEditor/XmlEditorOptionsPanel.cs:
        * MonoDevelop.XmlEditor.addin.xml: Track options panel API changes. 

2008-03-06  Michael Hutchinson  <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor/Schemas: Move to schemas.
	* MonoDevelop.XmlEditor/schemas: Moved from Schemas.
	
	* Makefile.am: Fix build.
	
	* MonoDevelop.XmlEditor/RunXslTransformCommand.cs:
	* MonoDevelop.XmlEditor/XmlSchemasPanelWidget.cs:
	* MonoDevelop.XmlEditor/XmlEditorViewContent.cs:
	* MonoDevelop.XmlEditor/XmlEditorView.cs:
	* MonoDevelop.XmlEditor/CreateSchemaCommand.cs:
	* MonoDevelop.XmlEditor/XmlSchemasPanel.cs:
	* MonoDevelop.XmlEditor/XmlEditorService.cs:
	* MonoDevelop.XmlEditor/OpenStylesheetCommand.cs:
	* MonoDevelop.XmlEditor.addin.xml:
	Quick and dirty port to MD trunk and GtkSourceView 2, just to get 
	it working before I port it to a TextEditorExtension.

2008-03-06  Michael Hutchinson  <mhutchinson@novell.com> 

	* Makefile.am: Update for the trunk build system and file 
	  layout changes.

2007-09-13 21:18  mrward

	* trunk/configure.in,
	  trunk/src/MonoDevelop.XmlEditor.Tests/AssemblyInfo.cs,
	  trunk/src/MonoDevelop.XmlEditor/AssemblyInfo.cs,
	  trunk/src/MonoDevelop.XmlEditor/MonoDevelop.XmlEditor.addin.xml,
	  trunk/src/MonoDevelop.XmlEditor/XmlCompletionData.cs,
	  trunk/src/MonoDevelop.XmlEditor/XmlEditorAddInOptions.cs,
	  trunk/src/MonoDevelop.XmlEditor/XmlEditorService.cs,
	  trunk/src/MonoDevelop.XmlEditor/XmlEditorView.cs,
	  trunk/src/MonoDevelop.XmlEditor/XmlEditorViewContent.cs: XML
	  Editor now compiles and works with MonoDevelop 0.15

2007-06-13 22:31  mrward

	* trunk/configure.in: Configure now checks the MonoDevelop version
	  is 0.14

2007-06-13 22:23  mrward

	* trunk/ChangeLog: Updated changelog ready for a snapshot release
	  0.4 that builds against MonoDevelop 0.14

2007-06-10 10:50  mrward
