@@ -2,24 +2,32 @@
 ADDIN_BUILD = $(top_builddir)/build/AddIns/MonoDevelop.XmlEditor
 ASSEMBLY = $(ADDIN_BUILD)/MonoDevelop.XmlEditor.dll
 
-REFS = -r:System \
-	-r:System.Data \
-	-r:System.Xml \
+REFS =  \
+	$(GLADE_SHARP_LIBS) \
+	$(GNOME_VFS_SHARP_LIBS) \
+	$(GTK_SHARP_LIBS) \
+	$(GTKSOURCEVIEW2_SHARP_LIBS) \
+	$(MONO_ADDINS_LIBS) \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Components.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Core.Gui.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Ide.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Projects.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Projects.Gui.dll \
-	-r:$(top_builddir)/build/AddIns/MonoDevelop.SourceEditor.dll \
-	$(MONO_ADDINS_LIBS) \
-	$(GTK_SHARP_LIBS) \
-	$(GNOME_VFS_SHARP_LIBS) \
-	$(GLADE_SHARP_LIBS) \
-	$(GTKSOURCEVIEW2_SHARP_LIBS)
+	-r:$(top_srcdir)/build/AddIns/MonoDevelop.SourceEditor.dll \
+	-r:System \
+	-r:System.Data \
+	-r:System.Xml
 
-FILES = \
+FILES =  \
 	AssemblyInfo.cs \
+	MonoDevelop.XmlEditor.XPath/XPathHistoryList.cs \
+	MonoDevelop.XmlEditor.XPath/XPathNamespaceList.cs \
+	MonoDevelop.XmlEditor.XPath/XPathNodeMatch.cs \
+	MonoDevelop.XmlEditor.XPath/XPathNodeTextMarker.cs \
+	MonoDevelop.XmlEditor.XPath/XPathQueryPad.cs \
+	MonoDevelop.XmlEditor.XPath/XPathQueryPadOptions.cs \
+	MonoDevelop.XmlEditor.XPath/XPathQueryWidget.cs \
 	MonoDevelop.XmlEditor/AssignStylesheetCommand.cs \
 	MonoDevelop.XmlEditor/Commands.cs \
 	MonoDevelop.XmlEditor/CreateSchemaCommand.cs \
@@ -29,50 +37,43 @@ FILES = \
 	MonoDevelop.XmlEditor/GoToSchemaDefinitionCommand.cs \
 	MonoDevelop.XmlEditor/OpenStylesheetCommand.cs \
 	MonoDevelop.XmlEditor/OpenXPathQueryPadCommand.cs \
-	MonoDevelop.XmlEditor/QualifiedNameCollection.cs \
 	MonoDevelop.XmlEditor/QualifiedName.cs \
+	MonoDevelop.XmlEditor/QualifiedNameCollection.cs \
 	MonoDevelop.XmlEditor/RemoveXPathHighlightingCommand.cs \
 	MonoDevelop.XmlEditor/RunXslTransformCommand.cs \
 	MonoDevelop.XmlEditor/SelectXmlSchemaDialog.cs \
 	MonoDevelop.XmlEditor/SourceViewTextIterator.cs \
 	MonoDevelop.XmlEditor/ValidateXmlCommand.cs \
-	MonoDevelop.XmlEditor/XmlCompletionDataCollection.cs \
 	MonoDevelop.XmlEditor/XmlCompletionData.cs \
+	MonoDevelop.XmlEditor/XmlCompletionDataCollection.cs \
 	MonoDevelop.XmlEditor/XmlCompletionDataProvider.cs \
-	MonoDevelop.XmlEditor/XmlElementPath.cs \
-	MonoDevelop.XmlEditor/XmlNamespace.cs \
-	MonoDevelop.XmlEditor/XmlParser.cs \
-	MonoDevelop.XmlEditor/XmlSchemaCompletionDataCollection.cs \
-	MonoDevelop.XmlEditor/XmlSchemaCompletionData.cs \
-	MonoDevelop.XmlEditor/XmlSchemaManager.cs \
-	MonoDevelop.XmlEditor/XmlSchemaAssociation.cs \
-	MonoDevelop.XmlEditor/XmlEditorAddInOptions.cs \
-	MonoDevelop.XmlEditor/XmlDisplayBinding.cs \
-	MonoDevelop.XmlEditor/XmlEditorView.cs \
-	MonoDevelop.XmlEditor/XmlEditorWindow.cs \
 	MonoDevelop.XmlEditor/XmlCompletionListWindow.cs \
+	MonoDevelop.XmlEditor/XmlDisplayBinding.cs \
+	MonoDevelop.XmlEditor/XmlEditorAddInOptions.cs \
 	MonoDevelop.XmlEditor/XmlEditorListWindow.cs \
-	MonoDevelop.XmlEditor/XmlEditorViewContent.cs \
 	MonoDevelop.XmlEditor/XmlEditorOptionsPanel.cs \
 	MonoDevelop.XmlEditor/XmlEditorOptionsPanelWidget.cs \
+	MonoDevelop.XmlEditor/XmlEditorService.cs \
+	MonoDevelop.XmlEditor/XmlEditorView.cs \
+	MonoDevelop.XmlEditor/XmlEditorViewContent.cs \
+	MonoDevelop.XmlEditor/XmlEditorWindow.cs \
+	MonoDevelop.XmlEditor/XmlElementPath.cs \
+	MonoDevelop.XmlEditor/XmlFileExtensionNode.cs \
+	MonoDevelop.XmlEditor/XmlFileExtensions.cs \
+	MonoDevelop.XmlEditor/XmlNamespace.cs \
+	MonoDevelop.XmlEditor/XmlParser.cs \
+	MonoDevelop.XmlEditor/XmlSchemaAssociation.cs \
+	MonoDevelop.XmlEditor/XmlSchemaCompletionData.cs \
+	MonoDevelop.XmlEditor/XmlSchemaCompletionDataCollection.cs \
+	MonoDevelop.XmlEditor/XmlSchemaManager.cs \
 	MonoDevelop.XmlEditor/XmlSchemasPanel.cs \
 	MonoDevelop.XmlEditor/XmlSchemasPanelWidget.cs \
-	MonoDevelop.XmlEditor/XmlFileExtensions.cs \
-	MonoDevelop.XmlEditor/XmlEditorService.cs \
-	MonoDevelop.XmlEditor/XmlFileExtensionNode.cs \
-	MonoDevelop.XmlEditor/XslOutputViewContent.cs \
-	MonoDevelop.XmlEditor.XPath/XPathHistoryList.cs \
-	MonoDevelop.XmlEditor.XPath/XPathNamespaceList.cs \
-	MonoDevelop.XmlEditor.XPath/XPathNodeMatch.cs \
-	MonoDevelop.XmlEditor.XPath/XPathNodeTextMarker.cs \
-	MonoDevelop.XmlEditor.XPath/XPathQueryPad.cs \
-	MonoDevelop.XmlEditor.XPath/XPathQueryPadOptions.cs \
-	MonoDevelop.XmlEditor.XPath/XPathQueryWidget.cs
+	MonoDevelop.XmlEditor/XslOutputViewContent.cs
 
-DATA_FILES = \
+DATA_FILES =  \
 	schemas/appconfig.xsd \
-	schemas/MonoDevelopAddIn.xsd \
 	schemas/manifest.xsd \
+	schemas/MonoDevelopAddIn.xsd \
 	schemas/nant.xsd \
 	schemas/readme.txt \
 	schemas/W3C-License.html \
@@ -80,9 +81,9 @@ DATA_FILES = \
 	schemas/xslt.xsd
 
 RES =  \
+	Icons/XPathQueryPad.png \
 	MonoDevelop.XmlEditor.addin.xml \
-	XmlEditor.glade \
-	Icons/XPathQueryPad.png
+	XmlEditor.glade
 
 
 DATA_FILE_BUILD = $(addprefix $(ADDIN_BUILD)/schemas/, $(notdir $(DATA_FILES)))
