@@ -1,12 +1,12 @@
 <Combine name="MonoDevelop.XmlEditor" fileversion="2.0">
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="CombineConfiguration">
-      <Entry build="True" name="MonoDevelop.XmlEditor.Tests" configuration="Debug" />
-      <Entry build="True" name="MonoDevelop.XmlEditor" configuration="Debug" />
+      <Entry build="False" name="MonoDevelop.XmlEditor.Tests" configuration="Debug" />
+      <Entry build="False" name="MonoDevelop.XmlEditor" configuration="Debug" />
     </Configuration>
     <Configuration name="Release" ctype="CombineConfiguration">
-      <Entry build="True" name="MonoDevelop.XmlEditor.Tests" configuration="Debug" />
-      <Entry build="True" name="MonoDevelop.XmlEditor" configuration="Debug" />
+      <Entry build="False" name="MonoDevelop.XmlEditor.Tests" configuration="Release" />
+      <Entry build="False" name="MonoDevelop.XmlEditor" configuration="Release" />
     </Configuration>
   </Configurations>
   <StartMode startupentry="MonoDevelop.XmlEditor" single="True">
@@ -14,7 +14,7 @@
     <Execute type="None" entry="MonoDevelop.XmlEditor" />
   </StartMode>
   <Entries>
-    <Entry filename="MonoDevelop.XmlEditor.Tests/MonoDevelop.XmlEditor.Tests.mdp" />
-    <Entry filename="MonoDevelop.XmlEditor/MonoDevelop.XmlEditor.mdp" />
+    <Entry filename="Tests/MonoDevelop.XmlEditor.Tests.mdp" />
+    <Entry filename="MonoDevelop.XmlEditor.mdp" />
   </Entries>
 </Combine>
