@@ -1,3 +1,9 @@
+2008-03-10  Michael Hutchinson  <mhutchinson@novell.com> 
+
+	* Makefile.am:
+	* MonoDevelop.XmlEditor.mds:
+	* MonoDevelop.XmlEditor.mdp: Fix MonoDevelop project. 
+
 2008-03-07  Michael Hutchinson  <mhutchinson@novell.com> 
 
         * MonoDevelop.XmlEditor/XmlSchemasPanel.cs:
